Chpter02 73ページまで

--- a/index.html
+++ b/index.html
@@ -1,14 +1,91 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="description" content="A sample HTML document">
-        <title>Sample HTML Document</title>
-    </head>
-    <body>
-        <h1>Welcome to the Sample HTML Document</h1>
-        <p>This is a simple HTML document created as an example.</p>
-        <p>This is a pen</p>
-        <img src="./amaya_icon.png">
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="description" content="A sample HTML document">
+    <title>Sample HTML Document</title>
+</head>
+
+<body>
+    <h1>Welcome to the Sample HTML Document</h1>
+    <p>This is a simple HTML document created as an example.</p>
+    <p>This is a pen</p>
+    <img src="./amaya_icon.png" id="idol-icon" alt="Tsubame Amaya Icon">
+
+    <div class="idol-info__wrapper">
+        <div class="idol-info__eng">Tsubame Amaya</div>
+        <div class="idol-info__name">雨夜 燕</div>
+        <div class="idol-info__cv">CV：天音 ゆかり</div>
+        <div class="idol-info__box">
+            <div class="idol-info__box-head">プロフィール</div>
+            <div class="idol-info__data">
+                <div class="idol-info__data-inner">
+                    <div class="idol-info__data-box">
+                        <p class="idol-info__data-head">年齢</p>
+                        <p class="idol-info__data-text">17歳</p>
+                    </div>
+                    <div class="idol-info__data-box">
+                        <p class="idol-info__data-head">血液型</p>
+                        <p class="idol-info__data-text">A型</p>
+                    </div>
+                </div>
+                <div class="idol-info__data-inner">
+                    <div class="idol-info__data-box">
+                        <p class="idol-info__data-head">誕生日</p>
+                        <p class="idol-info__data-text">5月20日</p>
+                    </div>
+                    <div class="idol-info__data-box">
+                        <p class="idol-info__data-head">星座</p>
+                        <p class="idol-info__data-text">おうし座</p>
+                    </div>
+                </div>
+                <div class="idol-info__data-inner">
+                    <div class="idol-info__data-box">
+                        <p class="idol-info__data-head">身長</p>
+                        <p class="idol-info__data-text">169cm</p>
+                    </div>
+                    <div class="idol-info__data-box">
+                        <p class="idol-info__data-head">体重</p>
+                        <p class="idol-info__data-text">51kg</p>
+                    </div>
+                </div>
+                <div class="idol-info__data-inner">
+                    <div class="idol-info__data-box">
+                        <p class="idol-info__data-head">スリーサイズ</p>
+                        <p class="idol-info__data-text">80/55/82</p>
+                    </div>
+                    <div class="idol-info__data-box">
+                        <p class="idol-info__data-head">利き手</p>
+                        <p class="idol-info__data-text">右</p>
+                    </div>
+                </div>
+                <div class="idol-info__data-inner">
+                    <div class="idol-info__data-box">
+                        <p class="idol-info__data-head">出身地</p>
+                        <p class="idol-info__data-text">東京都</p>
+                    </div>
+                </div>
+                <div class="idol-info__data-inner">
+                    <div class="idol-info__data-box">
+                        <p class="idol-info__data-head">趣味</p>
+                        <p class="idol-info__data-text">書道、歴史（日本史）、読書</p>
+                    </div>
+                </div>
+                <div class="idol-info__data-inner">
+                    <div class="idol-info__data-box">
+                        <p class="idol-info__data-head">特技</p>
+                        <p class="idol-info__data-text">秘書技能全般、数学、書道</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <p class="idol-info__text tsubame">
+            初星学園生徒会副会長。学園No.2のアイドル。実力相応のプライドを持ち、尊大な態度を取る。自分にも他人にも厳しいが、面倒見は良い。幼馴染の星南をライバル視しており、いずれ星南を超えて『一番星』になると公言している。
+        </p>
+    </div>
+    <a href="#idol-icon">TOPに戻る</a>
+    <a href="./amaya_info.html">詳細情報へ</a>
+</body>
+
 </html>
