--- a/amaya_info.html
+++ b/amaya_info.html
@@ -43,3 +43,10 @@
         </tr>
     </tfoot>
 </table>
+
+<form action="" method="post">
+    <p><label for="">名前<input type="text" name="氏名"></label></p>
+    <p><label for="">メールアドレス<input type="email" name="Eメール"></label></p>
+    <p><label for="">メッセージ<textarea name="内容"></textarea></label></p>
+    <input type="submit" value="送信">
+</form>
